Update package.json with rewrites and URL settings
Added rewrites and URL configuration options.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "duokid",
-  "version": "1.0.0",
-  "description": "DuoKid voice assistant",
-  "scripts": {},
-  "dependencies": {}
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1.js" }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
